--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "mongoose": "^6.0.10",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
