--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "Marcelo Mendes",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0"
   },
